# ChessCast

./: .gitignore  LICENSE  Procfile  README.md  SECURITY.md  pyproject.toml  requirements.txt
api/: chess_com_api.py  gpt_api.py  lichess_api.py  unsplash_api.py
core/: bot.py  database.py  languages.py  scheduler.py  static_facts.py
tests/: test_send_daily_tasks.py  test_send_gpt.py
