[project]
name = "chesscast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.7.0",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "openai>=1.65.4",
    "pymongo>=4.11.2",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.11.1",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]

[dependency-groups]
dev = [
    "ipython>=8.33.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
